Fix alignment of items in heading and add img Align content on page to center, added img to top, and finally got everything placed where it needed to be!

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 /*Header section with Logo, Links, Hero, image, and button*/
 .align {
     background: #1F2937;
-    padding-bottom: 75px;
+    padding-bottom: 100px;
     width: 100%;
 }
 
@@ -50,14 +50,10 @@ h1 {
     font-size: 18px;
 }
 
-.img {
-    background-color: grey;
-    padding: 50px;
-    max-width: 300px;
-    max-height: 150px;
-    color: #F9FAf8;
-    display: flex;
-    justify-content: flex-end;
+img {
+   width: 500px;
+   height: 320px;
+   
 }
 
 button {
@@ -71,6 +67,16 @@ button {
 
 .top {
     display: flex;
+}
 
-
+.twa {
+    display: flex;
+    margin-top: 150px;
+    
+}   
+.mid {
+    width: 450px;
+    padding-right: 300px;
+    padding-top: 0;
+    
 }
